Add album art url to Song
